testdata/test/resources/com/yafred/asn1/test/should-fail/choice_duplicate_alternative.asn
-- FAILS: duplicate component names
Module DEFINITIONS AUTOMATIC TAGS ::= BEGIN



My-Choise ::= CHOICE {
un BOOLEAN,
deux BOOLEAN,
un BOOLEAN,
...,
[[ un BOOLEAN ]]
}


END